deployment/flask-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-echo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-echo
  template:
    metadata:
      labels:
        app: flask-echo
    spec:
      containers:
      - name: flask-echo
        image: thatthep/flask-echo:main
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
