deployment/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-echo-service
spec:
  selector:
    app: flask-echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
