deployment/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-echo-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: flask-echo-k3s.123to.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-echo-service
            port: 
              number: 80
